<resources>
    <string name="app_name">Movies</string>
    <string name="title_activity_home__layout">Home_Layout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mhmd_sami">Namee</string>


    <string name="sign_up_button">Continue</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account_SignIn"> Already have an account? <font color="#C20AEF">Login</font></string>
    <string name="Continue"> Continue</string>
    <string name="LogIn"> LogIn</string>
    <string name="interest"> Your Interests </string>
    <string name="finish"> Finish</string>
    <string name="Drama"> Drama</string>
    <string name="Action"> Action</string>
    <string name="Comedy"> Comedy</string>
    <string name="Romance"> Romance</string>
    <string name="Horror"> Horror</string>
    <string name="sign_up"> Dont have an account? <font color="#C20AEF">Sign Up</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="text">texttexttexttexttexttexttexttexttexttext</string>
    <string name="family">Family</string>


</resources>
