<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:id="@+id/logoSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoSignUp"
        android:orientation="vertical"
        android:id="@+id/layout">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/mail"
                android:hint="@string/email"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:textColor="#747474"
        android:id="@+id/dont_have_account"
        android:layout_below="@+id/layout"
        android:layout_marginStart="24dp"
        />

    <Button
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/LogIn"
        android:textColor="@android:color/white" />
</RelativeLayout>